--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7.1"
+        "php": ">=7.1",
+        "phpspec/phpspec": "^4.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4"
