Fix wrong phpspec require

--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7.1",
-        "phpspec/phpspec": "^4.2"
+        "php": ">=7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.4"
+        "phpunit/phpunit": "^6.4",
+        "phpspec/phpspec": "^4.2"
     },
     "autoload": {
         "psr-4": {
