Remove composer platform constraint from nightly build

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ matrix:
             php: 7.1
         -
             php: nightly
+            env: COMPOSER_FLAGS='--ignore-platform-reqs'
     allow_failures:
         - php: nightly
 
