--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,20 @@ cache:
     directories:
         - $HOME/.composer/cache
 
-install: composer install
+install: composer update $COMPOSER_FLAGS
 
 matrix:
     include:
         -
             php: 7.1
+        -
+            php: 7.1
+            env: COMPOSER_FLAGS='--prefer-lowest'
+        -
+            php: 7.2
+        -
+            php: 7.2
+            env: COMPOSER_FLAGS='--prefer-lowest'
         -
             php: nightly
             env: COMPOSER_FLAGS='--ignore-platform-reqs'
