Optimized imports and extracted few methods into functions
- assertValidNamePattern
- assertEnumClassIsAbstract
- assertValidEnumCollection
- assertElementNameIsString
- assertValidEnumElementObjectType

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,10 @@
     "autoload": {
         "psr-4": {
             "Zlikavac32\\Enum\\": "src/"
-        }
+        },
+        "files": [
+            "src/functions.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
