--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,11 @@ matrix:
             php: 7.2
             env: COMPOSER_FLAGS='--prefer-lowest'
         -
+            php: 7.3
+        -
+            php: 7.3
+            env: COMPOSER_FLAGS='--prefer-lowest'
+        -
             php: nightly
             env: COMPOSER_FLAGS='--ignore-platform-reqs'
     allow_failures:
