include PHP 8.0 in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ matrix:
             php: 7.4
             env: COMPOSER_FLAGS='--prefer-lowest'
         -
+            php: 8.0
+        -
             php: nightly
             env: COMPOSER_FLAGS='--ignore-platform-reqs'
     allow_failures:
