Rename namespace and class to ZEnum
Since PHP 8.1 has enum as a keyword, it's no longer
possible to have that as a namespace or a class name.

--- a/phpspec.yml.dist
+++ b/phpspec.yml.dist
@@ -1,5 +1,5 @@
 suites:
     project_stats:
-        namespace: Zlikavac32\Enum
-        psr4_prefix: Zlikavac32\Enum
+        namespace: Zlikavac32\ZEnum
+        psr4_prefix: Zlikavac32\ZEnum
 formatter.name: dot
