--- a/composer.json
+++ b/composer.json
@@ -12,16 +12,16 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "ext-json": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0",
-        "phpspec/phpspec": "^6.1"
+        "phpunit/phpunit": "^9.5",
+        "phpspec/phpspec": "^7.2"
     },
     "autoload": {
         "psr-4": {
-            "Zlikavac32\\Enum\\": "src/"
+            "Zlikavac32\\ZEnum\\": "src/"
         },
         "files": [
             "src/functions.php"
@@ -29,7 +29,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Zlikavac32\\Enum\\Tests\\": "tests/"
+            "Zlikavac32\\ZEnum\\Tests\\": "tests/"
         }
     }
 }
